<resources>
    <string name="app_name">Vozarron</string>
    <string name="participantes_titulo">Participantes</string>
    <string name="entrenadores_titulo">Entrenadores</string>
    <string name="grupos_titulo">Grupos</string>
    <string name="etq_votar">Votar</string>
    <string name="etq_id">Id:</string>
    <string name="etq_nombre">Nombre:</string>
    <string name="etq_genero">Genero:</string>
    <string name="etq_historial">Historial:</string>
    <string name="etq_entrenador">Entrenador:</string>
    <string name="etq_rol">Rol:</string>
    <string name="etq_foto">Foto:</string>
    <string name="etq_video">Video:</string>
    <string name="etq_edad">Edad:</string>
    <string name="etq_estado">Estado:</string>
    <string name="registrar">Registrar</string>
    <string name="etq_ver_video">Ver video</string>
    <string name="etq_registrar_participante">Registrar Participante</string>
    <string name="etq_internacionalizacion">Cambiar de idioma</string>
    <string name="ingrese_nombre">Ingrese su nombre</string>
    <string name="btn_votar">Votar</string>
    <string name="etq_descripcion">Regiistrar Participante</string>
    <string name="etq_nombre_edit">Ingrese nombre</string>
    <string name="etq_edad_edit">Ingrese edad</string>
    <string name="etq_foto_edit">Ingrese nombre de la foto</string>
    <string name="etq_video_edit">Ingrese URL del video</string>
    <string name="etq_registrar">Registrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
