<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uniquindio.proyecto.android.electiva.vozarron.RegistrarParticipanteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_registrar_participante"
        android:id="@+id/registrar_participante"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:layout_below="@+id/registrar_participante"
        android:layout_alignEnd="@+id/registrar_participante"
        android:layout_marginTop="42dp"
        android:layout_alignStart="@+id/registrar_participante"
        android:hint="@string/ingrese_nombre"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_edad"
        android:id="@+id/edad"
        android:layout_below="@+id/nombre"
        android:layout_alignStart="@+id/nombre"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_entrenador"
        android:id="@+id/entrenador"
        android:layout_above="@+id/combo_box_entrenador"
        android:layout_alignStart="@+id/edad" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/combo_box_entrenador"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_rol"
        android:id="@+id/rol"
        android:layout_below="@+id/combo_box_entrenador"
        android:layout_alignStart="@+id/edad"
        android:layout_marginTop="46dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/combo_rol"
        android:layout_below="@+id/rol"
        android:layout_alignStart="@+id/combo_box_entrenador" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_foto"
        android:id="@+id/foto"
        android:layout_below="@+id/combo_rol"
        android:layout_alignStart="@+id/rol"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_video"
        android:id="@+id/video"
        android:layout_below="@+id/foto"
        android:layout_alignEnd="@+id/edad" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:id="@+id/btn_registrar"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/video" />

</RelativeLayout>
