<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewGrupo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmentos.EntrenadorFragment"
        android:orientation="vertical"
        android:background="@color/fondo_normal">

        <!-- TODO: Update blank fragment layout -->
        <ImageView
            android:id="@+id/imagen"
            android:src="@drawable/jhonny"
            android:layout_width="@dimen/ancho_foto_perfil"
            android:layout_height="@dimen/alto_foto_perfil"
            android:longClickable="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marge_arriba_imagen"
            android:layout_margin="@dimen/margen_debajo_iamgen" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="1"
            android:layout_margin="@dimen/margen_tabla">

            <TableRow>
                <TextView
                    android:text="@string/etq_id"
                    android:padding="@dimen/relleno_campos_tabla" />
                <TextView
                    android:text="id_entrenador"
                    android:gravity="right"
                    android:padding="@dimen/relleno_campos_tabla" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/etq_nombre"
                    android:padding="@dimen/relleno_campos_tabla" />
                <TextView
                    android:text="nombre_entrenador"
                    android:gravity="right"
                    android:padding="@dimen/relleno_campos_tabla" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/etq_genero"
                    android:padding="@dimen/relleno_campos_tabla" />
                <TextView
                    android:text="genero_entrenador"
                    android:gravity="right"
                    android:padding="@dimen/relleno_campos_tabla" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/etq_historial"
                    android:padding="@dimen/relleno_campos_tabla" />
                <TextView
                    android:text="historial_participante"
                    android:gravity="right"
                    android:padding="@dimen/relleno_campos_tabla" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/participantes_titulo"
            android:id="@+id/participantes_titulo"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:id="@+id/btn_image_lista_participantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_listado"
            android:contentDescription="@string/etq_ver_video"
            android:background="@color/fondo_normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margen_arriba_imagen_boton"
            android:layout_marginBottom="@dimen/margen_debajo_imagen_boton"/>

    </LinearLayout>
</ScrollView>
