<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uniquindio.proyecto.android.electiva.vozarron.EntrenadorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_id"
        android:id="@+id/id"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="123456"
        android:id="@+id/text_id"
        android:layout_above="@+id/nombre"
        android:layout_alignStart="@+id/btn_participantes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_nombre"
        android:id="@+id/nombre"
        android:layout_below="@+id/id"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="nombre_entrenador"
        android:id="@+id/txtnombre"
        android:layout_above="@+id/genero"
        android:layout_alignStart="@+id/text_id" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_genero"
        android:id="@+id/genero"
        android:layout_below="@+id/nombre"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="genero_entrenador"
        android:id="@+id/txtgenero"
        android:layout_below="@+id/txtnombre"
        android:layout_alignStart="@+id/txtnombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_historial"
        android:id="@+id/historial"
        android:layout_below="@+id/genero"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="historial_entrenador"
        android:id="@+id/txthistorial"
        android:layout_below="@+id/txtgenero"
        android:layout_alignStart="@+id/txtgenero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participantes_titulo"
        android:id="@+id/btn_participantes"
        android:onClick="pasarAParticipantes"
        android:layout_below="@+id/txthistorial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />
</RelativeLayout>
