<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uniquindio.proyecto.android.electiva.vozarron.ParticipanteActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_nombre"
        android:id="@+id/nombre"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="nombre_participante"
        android:id="@+id/txtnombre"
        android:layout_alignTop="@+id/nombre"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_edad"
        android:id="@+id/edad"
        android:layout_below="@+id/nombre"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="edad_participante"
        android:id="@+id/txtedad"
        android:layout_alignTop="@+id/edad"
        android:layout_alignStart="@+id/txtnombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_entrenador"
        android:id="@+id/entrenador"
        android:layout_below="@+id/edad"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="entren_participante"
        android:id="@+id/txtentrenador"
        android:layout_below="@+id/txtedad"
        android:layout_alignStart="@+id/txtedad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/etq_estado"
        android:id="@+id/estado"
        android:layout_below="@+id/entrenador"
        android:layout_alignEnd="@+id/nombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="estado_participante"
        android:id="@+id/txtestado"
        android:layout_alignTop="@+id/estado"
        android:layout_alignStart="@+id/txtentrenador" />

</RelativeLayout>
